WebCore/editing/Editor.cpp
@@ -862,9 +862,9 @@ static const int textOnlyProperties[] = {
     CSSPropertyColor,
 };
 
-static TriState triStateOfStyleInComputedStyle(CSSStyleDeclaration* desiredStyle, CSSComputedStyleDeclaration* computedStyle, bool ignoreTextOnlyProperties = false)
+static TriState triStateOfStyle(CSSStyleDeclaration* desiredStyle, CSSStyleDeclaration* styleToCompare, bool ignoreTextOnlyProperties = false)
 {
-    RefPtr<CSSMutableStyleDeclaration> diff = getPropertiesNotInComputedStyle(desiredStyle, computedStyle);
+    RefPtr<CSSMutableStyleDeclaration> diff = getPropertiesNotIn(desiredStyle, styleToCompare);
 
     if (ignoreTextOnlyProperties)
         diff->removePropertiesInSet(textOnlyProperties, sizeof(textOnlyProperties) / sizeof(textOnlyProperties[0]));
@@ -878,17 +878,11 @@ static TriState triStateOfStyleInComputedStyle(CSSStyleDeclaration* desiredStyle
 
 bool Editor::selectionStartHasStyle(CSSStyleDeclaration* style) const
 {
-    Node* nodeToRemove;
-    RefPtr<CSSComputedStyleDeclaration> selectionStyle = selectionComputedStyle(nodeToRemove);
+    bool shouldUseFixedFontDefaultSize;
+    RefPtr<CSSMutableStyleDeclaration> selectionStyle = selectionComputedStyle(shouldUseFixedFontDefaultSize);
     if (!selectionStyle)
         return false;
-    TriState state = triStateOfStyleInComputedStyle(style, selectionStyle.get());
-    if (nodeToRemove) {
-        ExceptionCode ec = 0;
-        nodeToRemove->remove(ec);
-        ASSERT(!ec);
-    }
-    return state == TrueTriState;
+    return triStateOfStyle(style, selectionStyle.get()) == TrueTriState;
 }
 
 TriState Editor::selectionHasStyle(CSSStyleDeclaration* style) const
@@ -896,21 +890,16 @@ TriState Editor::selectionHasStyle(CSSStyleDeclaration* style) const
     TriState state = FalseTriState;
 
     if (!m_frame->selection()->isRange()) {
-        Node* nodeToRemove;
-        RefPtr<CSSComputedStyleDeclaration> selectionStyle = selectionComputedStyle(nodeToRemove);
+        bool shouldUseFixedFontDefaultSize;
+        RefPtr<CSSMutableStyleDeclaration> selectionStyle = selectionComputedStyle(shouldUseFixedFontDefaultSize);
         if (!selectionStyle)
             return FalseTriState;
-        state = triStateOfStyleInComputedStyle(style, selectionStyle.get());
-        if (nodeToRemove) {
-            ExceptionCode ec = 0;
-            nodeToRemove->remove(ec);
-            ASSERT(!ec);
-        }
+        state = triStateOfStyle(style, selectionStyle.get());
     } else {
         for (Node* node = m_frame->selection()->start().node(); node; node = node->traverseNextNode()) {
             RefPtr<CSSComputedStyleDeclaration> nodeStyle = computedStyle(node);
             if (nodeStyle) {
-                TriState nodeState = triStateOfStyleInComputedStyle(style, nodeStyle.get(), !node->isTextNode());
+                TriState nodeState = triStateOfStyle(style, nodeStyle.get(), !node->isTextNode());
                 if (node == m_frame->selection()->start().node())
                     state = nodeState;
                 else if (state != nodeState && node->isTextNode()) {
@@ -944,8 +933,8 @@ static bool hasTransparentBackgroundColor(CSSStyleDeclaration* style)
 
 String Editor::selectionStartCSSPropertyValue(int propertyID)
 {
-    Node* nodeToRemove;
-    RefPtr<CSSComputedStyleDeclaration> selectionStyle = selectionComputedStyle(nodeToRemove);
+    bool shouldUseFixedFontDefaultSize = false;
+    RefPtr<CSSMutableStyleDeclaration> selectionStyle = selectionComputedStyle(shouldUseFixedFontDefaultSize);
     if (!selectionStyle)
         return String();
 
@@ -958,7 +947,7 @@ String Editor::selectionStartCSSPropertyValue(int propertyID)
         RefPtr<Range> range(m_frame->selection()->toNormalizedRange());
         ExceptionCode ec = 0;
         for (Node* ancestor = range->commonAncestorContainer(ec); ancestor; ancestor = ancestor->parentNode()) {
-            selectionStyle = computedStyle(ancestor);
+            selectionStyle = computedStyle(ancestor)->copy();
             if (!hasTransparentBackgroundColor(selectionStyle.get())) {
                 value = selectionStyle->getPropertyValue(CSSPropertyBackgroundColor);
                 break;
@@ -970,14 +959,8 @@ String Editor::selectionStartCSSPropertyValue(int propertyID)
         RefPtr<CSSValue> cssValue = selectionStyle->getPropertyCSSValue(CSSPropertyFontSize);
         ASSERT(cssValue->isPrimitiveValue());
         int fontPixelSize = static_cast<CSSPrimitiveValue*>(cssValue.get())->getIntValue(CSSPrimitiveValue::CSS_PX);
-        int size = CSSStyleSelector::legacyFontSize(m_frame->document(), fontPixelSize, selectionStyle->useFixedFontDefaultSize());
+        int size = CSSStyleSelector::legacyFontSize(m_frame->document(), fontPixelSize, shouldUseFixedFontDefaultSize);
         value = String::number(size);
-    }
-
-    if (nodeToRemove) {
-        ExceptionCode ec = 0;
-        nodeToRemove->remove(ec);
-        ASSERT(!ec);
     }
 
     return value;
@@ -3246,10 +3229,8 @@ void Editor::computeAndSetTypingStyle(CSSStyleDeclaration* style, EditAction edi
     m_frame->selection()->setTypingStyle(mutableStyle.release());
 }
 
-PassRefPtr<CSSComputedStyleDeclaration> Editor::selectionComputedStyle(Node*& nodeToRemove) const
+PassRefPtr<CSSMutableStyleDeclaration> Editor::selectionComputedStyle(bool& shouldUseFixedFontDefaultSize) const
 {
-    nodeToRemove = 0;
-
     if (m_frame->selection()->isNone())
         return 0;
 
@@ -3269,34 +3250,19 @@ PassRefPtr<CSSComputedStyleDeclaration> Editor::selectionComputedStyle(Node*& no
         return 0;
 
     RefPtr<Element> styleElement = element;
-    ExceptionCode ec = 0;
+    RefPtr<CSSComputedStyleDeclaration> style = computedStyle(styleElement.release());
+    RefPtr<CSSMutableStyleDeclaration> mutableStyle = style->copy();
+    shouldUseFixedFontDefaultSize = style->useFixedFontDefaultSize();
 
-    if (m_frame->selection()->typingStyle()) {
-        styleElement = m_frame->document()->createElement(spanTag, false);
+    if (!m_frame->selection()->typingStyle())
+        return mutableStyle;
 
-        styleElement->setAttribute(styleAttr, m_frame->selection()->typingStyle()->cssText(), ec);
-        ASSERT(!ec);
+    RefPtr<CSSMutableStyleDeclaration> typingStyle = m_frame->selection()->typingStyle()->copy();
+    ApplyStyleCommand::removeNonEditingProperties(typingStyle.get());
+    prepareEditingStyleToApplyAt(typingStyle.get(), position);
+    mutableStyle->merge(typingStyle.get());
 
-        styleElement->appendChild(m_frame->document()->createEditingTextNode(""), ec);
-        ASSERT(!ec);
-
-        if (element->renderer() && element->renderer()->canHaveChildren())
-            element->appendChild(styleElement, ec);
-        else {
-            Node* parent = element->parent();
-            Node* next = element->nextSibling();
-
-            if (next)
-                parent->insertBefore(styleElement, next, ec);
-            else
-                parent->appendChild(styleElement, ec);
-        }
-        ASSERT(!ec);
-
-        nodeToRemove = styleElement.get();
-    }
-
-    return computedStyle(styleElement.release());
+    return mutableStyle;
 }
 
 void Editor::textFieldDidBeginEditing(Element* e)
